# periphore

./: .gitignore  .gitmessage  CLAUDE.md  Cargo.toml  README.md  cz.toml  package-lock.json  prek.toml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/gsd/: add-phase.md  add-tests.md  add-todo.md  ai-integration-phase.md  analyze-dependencies.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  code-review-fix.md  code-review.md  complete-milestone.md  discuss-phase.md  do.md  docs-update.md  eval-review.md  execute-phase.md  explore.md  extract_learnings.md  fast.md  forensics.md  from-gsd2.md  graphify.md  health.md  help.md  import.md  inbox.md  ingest-docs.md  insert-phase.md  intel.md  list-phase-assumptions.md  list-workspaces.md  manager.md  map-codebase.md  milestone-summary.md  new-milestone.md  new-project.md  new-workspace.md  (+36 more)
.claude/get-shit-done/references/: artifact-types.md  model-profile-resolution.md  verification-patterns.md
.claude/get-shit-done/templates/: phase-prompt.md
.claude/get-shit-done/workflows/: ai-integration-phase.md  autonomous.md  complete-milestone.md  discovery-phase.md  discuss-phase-assumptions.md  discuss-phase.md  eval-review.md  execute-phase.md  execute-plan.md  explore.md  health.md  help.md  new-milestone.md  new-project.md  note.md  plan-phase.md  plan-review-convergence.md  profile-user.md  research-phase.md  resume-project.md  secure-phase.md  settings.md  sketch.md  spec-phase.md  sync-skills.md  transition.md  ui-phase.md  ui-review.md  undo.md  update.md  validate-phase.md  verify-phase.md  verify-work.md
.claude/gsd-local-patches/: backup-meta.json
.claude/gsd-local-patches/agents/: gsd-phase-researcher.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SDLC.md  STATE.md  config.json
.planning/phases/01-workspace-protocol-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-identity-cryptography/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-configuration-trust-persistence/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-ipc-layer/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-VALIDATION.md
.planning/phases/05-cli-tool/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW.md  05-SECURITY.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-tcp-peering/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-HUMAN-UAT.md  06-PATTERNS.md  06-RESEARCH.md  06-REVIEW-FIX.md  06-REVIEW.md  06-SECURITY.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-peer-discovery/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-HUMAN-UAT.md  07-PATTERNS.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  WORKSPACE-PATTERNS.md
contrib/: periphored.service
crates/periphore/: Cargo.toml
crates/periphore-capture/: Cargo.toml
crates/periphore-cli/: Cargo.toml
crates/periphore-cli/src/: cli.rs  client.rs  lib.rs
crates/periphore-cli/src/commands/: mod.rs  status.rs  topology.rs  trust.rs
crates/periphore-cli/src/commands/peers/: discovered.rs  mod.rs  pending.rs
crates/periphore-cli/tests/: cli.rs
crates/periphore-config/: Cargo.toml
crates/periphore-config/src/: lib.rs  schema.rs
crates/periphore-config/tests/: config.rs
crates/periphore-core/: Cargo.toml
crates/periphore-core/src/: lib.rs
crates/periphore-core/tests/: state_machine.rs
crates/periphore-discovery/: Cargo.toml
crates/periphore-discovery/src/: error.rs  lib.rs  list.rs  mdns.rs  probe.rs
crates/periphore-discovery/tests/: integration.rs
crates/periphore-identity/: Cargo.toml
crates/periphore-identity/src/: bip39.rs  lib.rs
crates/periphore-identity/tests/: identity.rs
crates/periphore-inject/: Cargo.toml
crates/periphore-ipc/: Cargo.toml
crates/periphore-ipc/src/: lib.rs  path.rs  server.rs
crates/periphore-ipc/tests/: socket.rs
crates/periphore-net/: Cargo.toml
crates/periphore-net/src/: codec.rs  connection.rs  error.rs  event.rs  handshake.rs  lib.rs  manager.rs
crates/periphore-net/tests/: codec_error.rs  event_connection.rs  integration.rs
crates/periphore-protocol/: Cargo.toml
crates/periphore-protocol/src/: ipc.rs  lib.rs  peer.rs  types.rs
crates/periphore-protocol/tests/: roundtrip.rs
crates/periphore-trust/: Cargo.toml
crates/periphore-trust/src/: lib.rs  store.rs
crates/periphore-trust/tests/: trust.rs
crates/periphore/src/: main.rs
crates/periphored/: Cargo.toml
crates/periphored/src/: main.rs
crates/periphored/tests/: net_wiring.rs
(+40 files in other folders)
