[package]
name = "periphore-cli"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
periphore-config = { workspace = true, features = ["clap"] }
periphore-ipc    = { workspace = true }
clap             = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true }
periphore-protocol = { workspace = true }
