[package]
name = "periphore-config"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
publish.workspace    = true

[lints]
workspace = true

[features]
clap = ["dep:clap"]

[dependencies]
figment   = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
clap      = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
