[package]
name = "periphore-core"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
periphore-protocol = { workspace = true }
serde              = { workspace = true }
