[package]
name = "periphore-core"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
publish.workspace    = true

[lib]
doctest = false
test    = false

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
