[package]
name = "periphore-identity"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
publish.workspace    = true

[lib]
doctest = false
test    = false

[lints]
workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
sha2          = { workspace = true }
serde         = { workspace = true }
