[package]
name = "periphore-identity"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
publish.workspace    = true

[lib]
doctest = false
test    = false

[lints]
workspace = true

[dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
sha2          = { workspace = true }
serde         = { workspace = true }
rand_core     = { workspace = true }
thiserror     = { workspace = true }
directories   = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tempfile = "3"
