[package]
name = "periphore-ipc"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
publish.workspace    = true

[lints]
workspace = true

[dependencies]
periphore-protocol = { workspace = true }
tokio              = { workspace = true }
serde_json         = { workspace = true }
directories        = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
