[package]
name = "periphore-protocol"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
publish.workspace    = true

[lib]
doctest = false
test    = false

[lints]
workspace = true

[dependencies]
serde      = { workspace = true }
postcard   = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
postcard   = { workspace = true }
serde_json = { workspace = true }
