[package]
name = "periphore-trust"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
publish.workspace    = true

[lib]
doctest = false
test    = false

[lints]
workspace = true

[dependencies]
serde       = { workspace = true }
thiserror   = { workspace = true }
toml        = { workspace = true }
tempfile    = { workspace = true }
directories = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
