[package]
name = "periphored"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
publish.workspace    = true

[lints]
workspace = true

[[bin]]
name = "periphored"
path = "src/main.rs"

[dependencies]
periphore-config   = { workspace = true }
periphore-identity = { workspace = true }
periphore-ipc      = { workspace = true }
periphore-protocol = { workspace = true }
periphore-trust    = { workspace = true }
tokio              = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
